--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "expo": "~48.0.15",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
+    "react-icons": "^4.8.0",
     "react-native": "0.71.8",
     "react-native-fontawesome": "^7.0.0",
     "react-native-maps": "^1.7.1",
